HUST-CompilerPrinciple/lab3/parser1.output
Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID

   11 FuncDec: ID LP VarList RP
   12        | ID LP RP

   13 VarList: ParamDec
   14        | ParamDec COMMA VarList

   15 ParamDec: Specifier VarDec

   16 CompSt: LC DefList StmList RC

   17 StmList: %empty
   18        | Stmt StmList

   19 Stmt: Exp SEMI
   20     | CompSt
   21     | RETURN Exp SEMI
   22     | IF LP Exp RP Stmt
   23     | IF LP Exp RP Stmt ELSE Stmt
   24     | WHILE LP Exp RP Stmt

   25 DefList: %empty
   26        | Def DefList

   27 Def: Specifier DecList SEMI

   28 DecList: Dec
   29        | Dec COMMA DecList

   30 Dec: VarDec
   31    | VarDec ASSIGNOP Exp

   32 Exp: Exp ASSIGNOP Exp
   33    | Exp AND Exp
   34    | Exp OR Exp
   35    | Exp RELOP Exp
   36    | Exp PLUS Exp
   37    | Exp MINUS Exp
   38    | Exp STAR Exp
   39    | Exp DIV Exp
   40    | LP Exp RP
   41    | MINUS Exp
   42    | NOT Exp
   43    | ID LP Args RP
   44    | ID LP RP
   45    | ID
   46    | INT
   47    | FLOAT

   48 Args: Exp COMMA Args
   49     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6
    INT <type_int> (258) 46
    ID <type_id> (259) 10 11 12 43 44 45
    RELOP <type_id> (260) 35
    TYPE <type_id> (261) 7
    FLOAT <type_float> (262) 47
    LP (263) 11 12 22 23 24 40 43 44
    RP (264) 11 12 22 23 24 40 43 44
    LC (265) 16
    RC (266) 16
    SEMI (267) 4 6 19 21 27
    COMMA (268) 9 14 29 48
    PLUS (269) 36
    MINUS (270) 37 41
    STAR (271) 38
    DIV (272) 39
    ASSIGNOP (273) 31 32
    AND (274) 33
    OR (275) 34
    NOT (276) 42
    IF (277) 22 23
    ELSE (278) 23
    WHILE (279) 24
    RETURN (280) 21
    UMINUS (281)
    LOWER_THEN_ELSE (282)


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program <ptr> (29)
        on left: 1
        on right: 0
    ExtDefList <ptr> (30)
        on left: 2 3
        on right: 1 3
    ExtDef <ptr> (31)
        on left: 4 5 6
        on right: 3
    Specifier <ptr> (32)
        on left: 7
        on right: 4 5 15 27
    ExtDecList <ptr> (33)
        on left: 8 9
        on right: 4 9
    VarDec <ptr> (34)
        on left: 10
        on right: 8 9 15 30 31
    FuncDec <ptr> (35)
        on left: 11 12
        on right: 5
    VarList <ptr> (36)
        on left: 13 14
        on right: 11 14
    ParamDec <ptr> (37)
        on left: 15
        on right: 13 14
    CompSt <ptr> (38)
        on left: 16
        on right: 5 20
    StmList <ptr> (39)
        on left: 17 18
        on right: 16 18
    Stmt <ptr> (40)
        on left: 19 20 21 22 23 24
        on right: 18 22 23 24
    DefList <ptr> (41)
        on left: 25 26
        on right: 16 26
    Def <ptr> (42)
        on left: 27
        on right: 26
    DecList <ptr> (43)
        on left: 28 29
        on right: 27 29
    Dec <ptr> (44)
        on left: 30 31
        on right: 28 29
    Exp <ptr> (45)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 19 21 22 23 24 31 32 33 34 35 36 37 38 39 40 41 42 48 49
    Args <ptr> (46)
        on left: 48 49
        on right: 43 48


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


State 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   10 VarDec: ID .
   11 FuncDec: ID . LP VarList RP
   12        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 10 (VarDec)


State 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


State 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 16

    $default  reduce using rule 8 (ExtDecList)


State 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 17

    CompSt  go to state 18


State 14

   11 FuncDec: ID LP . VarList RP
   12        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 19

    Specifier  go to state 20
    VarList    go to state 21
    ParamDec   go to state 22


State 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 23

    ExtDecList  go to state 24
    VarDec      go to state 12


State 17

   16 CompSt: LC . DefList StmList RC

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 26
    Def        go to state 27


State 18

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 19

   12 FuncDec: ID LP RP .

    $default  reduce using rule 12 (FuncDec)


State 20

   15 ParamDec: Specifier . VarDec

    ID  shift, and go to state 23

    VarDec  go to state 28


State 21

   11 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 29


State 22

   13 VarList: ParamDec .
   14        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 30

    $default  reduce using rule 13 (VarList)


State 23

   10 VarDec: ID .

    $default  reduce using rule 10 (VarDec)


State 24

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 25

   27 Def: Specifier . DecList SEMI

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 32
    Dec      go to state 33


State 26

   16 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    FLOAT   shift, and go to state 36
    LP      shift, and go to state 37
    LC      shift, and go to state 17
    MINUS   shift, and go to state 38
    NOT     shift, and go to state 39
    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 43
    StmList  go to state 44
    Stmt     go to state 45
    Exp      go to state 46


State 27

   26 DefList: Def . DefList

    TYPE  shift, and go to state 2

    $default  reduce using rule 25 (DefList)

    Specifier  go to state 25
    DefList    go to state 47
    Def        go to state 27


State 28

   15 ParamDec: Specifier VarDec .

    $default  reduce using rule 15 (ParamDec)


State 29

   11 FuncDec: ID LP VarList RP .

    $default  reduce using rule 11 (FuncDec)


State 30

   14 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 20
    VarList    go to state 48
    ParamDec   go to state 22


State 31

   30 Dec: VarDec .
   31    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 49

    $default  reduce using rule 30 (Dec)


State 32

   27 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 50


State 33

   28 DecList: Dec .
   29        | Dec . COMMA DecList

    COMMA  shift, and go to state 51

    $default  reduce using rule 28 (DecList)


State 34

   46 Exp: INT .

    $default  reduce using rule 46 (Exp)


State 35

   43 Exp: ID . LP Args RP
   44    | ID . LP RP
   45    | ID .

    LP  shift, and go to state 52

    $default  reduce using rule 45 (Exp)


State 36

   47 Exp: FLOAT .

    $default  reduce using rule 47 (Exp)


State 37

   40 Exp: LP . Exp RP

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 53


State 38

   41 Exp: MINUS . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 54


State 39

   42 Exp: NOT . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 55


State 40

   22 Stmt: IF . LP Exp RP Stmt
   23     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 56


State 41

   24 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 57


State 42

   21 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 58


State 43

   20 Stmt: CompSt .

    $default  reduce using rule 20 (Stmt)


State 44

   16 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 59


State 45

   18 StmList: Stmt . StmList

    INT     shift, and go to state 34
    ID      shift, and go to state 35
    FLOAT   shift, and go to state 36
    LP      shift, and go to state 37
    LC      shift, and go to state 17
    MINUS   shift, and go to state 38
    NOT     shift, and go to state 39
    IF      shift, and go to state 40
    WHILE   shift, and go to state 41
    RETURN  shift, and go to state 42

    $default  reduce using rule 17 (StmList)

    CompSt   go to state 43
    StmList  go to state 60
    Stmt     go to state 45
    Exp      go to state 46


State 46

   19 Stmt: Exp . SEMI
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 61
    SEMI      shift, and go to state 62
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    STAR      shift, and go to state 65
    DIV       shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69


State 47

   26 DefList: Def DefList .

    $default  reduce using rule 26 (DefList)


State 48

   14 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 14 (VarList)


State 49

   31 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 70


State 50

   27 Def: Specifier DecList SEMI .

    $default  reduce using rule 27 (Def)


State 51

   29 DecList: Dec COMMA . DecList

    ID  shift, and go to state 23

    VarDec   go to state 31
    DecList  go to state 71
    Dec      go to state 33


State 52

   43 Exp: ID LP . Args RP
   44    | ID LP . RP

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    RP     shift, and go to state 72
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp   go to state 73
    Args  go to state 74


State 53

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   40    | LP Exp . RP

    RELOP     shift, and go to state 61
    RP        shift, and go to state 75
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    STAR      shift, and go to state 65
    DIV       shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69


State 54

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   41    | MINUS Exp .

    $default  reduce using rule 41 (Exp)


State 55

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   42    | NOT Exp .

    $default  reduce using rule 42 (Exp)


State 56

   22 Stmt: IF LP . Exp RP Stmt
   23     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 76


State 57

   24 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 77


State 58

   21 Stmt: RETURN Exp . SEMI
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 61
    SEMI      shift, and go to state 78
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    STAR      shift, and go to state 65
    DIV       shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69


State 59

   16 CompSt: LC DefList StmList RC .

    $default  reduce using rule 16 (CompSt)


State 60

   18 StmList: Stmt StmList .

    $default  reduce using rule 18 (StmList)


State 61

   35 Exp: Exp RELOP . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 79


State 62

   19 Stmt: Exp SEMI .

    $default  reduce using rule 19 (Stmt)


State 63

   36 Exp: Exp PLUS . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 80


State 64

   37 Exp: Exp MINUS . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 81


State 65

   38 Exp: Exp STAR . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 82


State 66

   39 Exp: Exp DIV . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 83


State 67

   32 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 84


State 68

   33 Exp: Exp AND . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 85


State 69

   34 Exp: Exp OR . Exp

    INT    shift, and go to state 34
    ID     shift, and go to state 35
    FLOAT  shift, and go to state 36
    LP     shift, and go to state 37
    MINUS  shift, and go to state 38
    NOT    shift, and go to state 39

    Exp  go to state 86


State 70

   31 Dec: VarDec ASSIGNOP Exp .
   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp

    RELOP     shift, and go to state 61
    PLUS      shift, and go to state 63
    MINUS     shift, and go to state 64
    STAR      shift, and go to state 65
    DIV       shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    AND       shift, and go to state 68
    OR        shift, and go to state 69

    $default  reduce using rule 31 (Dec)


State 71

   29 DecList: Dec COMMA DecList .

    $default  reduce using rule 29 (DecList)


State 72

   44 Exp: ID LP RP .

    $default  reduce using rule 44 (Exp)


State 73

   32 Exp: Exp . ASSIGNOP Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | Exp . PLUS Exp
   37    | Exp . MINUS Exp
   38    | Exp . STAR Exp
   39    | Exp . DIV Exp
   48 Args: Exp . COMMA Args
   49     | Exp .
